[project]
name = "hivecode"
description = "Hivecode is a series of libraries desgined to make programming less of an artisan task and more of an engineering task. It includes functions, decorators and multiple classes desgiined to make the implementation of development and analytical proyects more oriented to desigin and architecture and less of an implementation hell."
version = "0.0.0.7.0"
requires-python = ">=3.8.0"
authors = [
    { name = "Juan Manuel Mejía Botero", email = "juanmam941025@gmail.com" }
]

[project.optional-dependencies]
dev = [
    "build",
    "twine",
    "Sphinx"
]

[project.urls]
"Homepage" = "https://github.com/Juanmam/hivecode"
"Documentation" = "https://hivecode.readthedocs.io/en/latest/"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=native"
testpaths = [
    "test",
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optionals = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true