[metadata]
name = hivecode
description = Hivecode is a series of libraries desgined to make programming less of an artisan task and more of an engineering task. It includes functions, decorators and multiple classes desgiined to make the implementation of development and analytical proyects more oriented to desigin and architecture and less of an implementation hell.
author = Juan Manuel Mejía Botero
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    hivecore
    hiveadb
    hivesignal
python_requires = >=3.8.0
install_requires =
    paramiko==2.11.0
    scp>=0.14.4
    sklearn>=0.24.1
    azure-cosmos>=4.3.0
    openpyxl>=3.0.10
    tqdm>=4.64.1
    scipy>=1.6.2
    matplotlib>=3.4.2
    numpy>=1.20.1
    pandas>=1.2.4
    seaborn>=0.11.1
    koalas
package_dir = 
    = src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
hivecore = py.typed
hiveadb = py.typed
hivesignal = py.typed

[flake8]
max-line-length = 160